Added like to quiz + removed self likes restriction from flashcards + Added ng-pluralize to: feed comments, Items folders, box templates

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/Resources/BoxResources.he.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/Resources/BoxResources.he.resx
@@ -192,4 +192,7 @@
   <data name="JoinClass" xml:space="preserve">
     <value>עקוב</value>
   </data>
+  <data name="SingleItem" xml:space="preserve">
+    <value>מסמך 1</value>
+  </data>
 </root>
