--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Resources/GeneralResources.he.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Resources/GeneralResources.he.resx
@@ -208,4 +208,10 @@
   <data name="Remove" xml:space="preserve">
     <value>הסר</value>
   </data>
+  <data name="SingleCourse" xml:space="preserve">
+    <value>קורס 1</value>
+  </data>
+  <data name="SingleMember" xml:space="preserve">
+    <value>סטודנט 1</value>
+  </data>
 </root>
