--- a/Zbang.Zbox.Infrastructure/Enums/Resources/Gamification.resx
+++ b/Zbang.Zbox.Infrastructure/Enums/Resources/Gamification.resx
@@ -117,6 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BadgeCreateQuizzes" xml:space="preserve">
+    <value>Quizzy Lizzy</value>
+  </data>
+  <data name="BadgeFollowClass" xml:space="preserve">
+    <value>Explorer</value>
+  </data>
+  <data name="BadgeLikes" xml:space="preserve">
+    <value>Kiss from Keanu</value>
+  </data>
+  <data name="BadgeRegister" xml:space="preserve">
+    <value>Spitballer</value>
+  </data>
+  <data name="BadgeUploadFiles" xml:space="preserve">
+    <value>Helpful Harry</value>
+  </data>
   <data name="Level1" xml:space="preserve">
     <value>Freshman</value>
   </data>
