--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/GamificationResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/GamificationResources.resx
@@ -120,8 +120,8 @@
   <data name="Badges" xml:space="preserve">
     <value>Badges</value>
   </data>
-  <data name="Community" xml:space="preserve">
-    <value>Community</value>
+  <data name="Leaderboard" xml:space="preserve">
+    <value>Leaderboard</value>
   </data>
   <data name="Levels" xml:space="preserve">
     <value>Levels</value>
