fixes in design + gamification in user header

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Item/Resources/ItemsResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Item/Resources/ItemsResources.resx
@@ -174,4 +174,7 @@
   <data name="NewReply" xml:space="preserve">
     <value>Reply</value>
   </data>
+  <data name="LikeToasterText" xml:space="preserve">
+    <value>Enjoyed this document? give it a like:</value>
+  </data>
 </root>
