--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/Resources/HomePageResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/Resources/HomePageResources.resx
@@ -262,5 +262,5 @@ chat with their classmates, create online quizzes and get better grades. </value
   </data>
   <data name="A12" xml:space="preserve">
     <value>Win $500</value>
-  </data>
+  <comment>to be remove</comment></data>
 </root>
