--- a/Zbang.Cloudents.Mvc4WebRole/Models/Account/Resources/LogOnResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Models/Account/Resources/LogOnResources.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ConfirmPasswordComapre" xml:space="preserve">
+  <data name="ConfirmPasswordCompare" xml:space="preserve">
     <value>Passwords should match</value>
   </data>
   <data name="EmailRequired" xml:space="preserve">
@@ -128,8 +128,5 @@
   </data>
   <data name="PwdAtLeast6Chars" xml:space="preserve">
     <value>Your password must be at least 6 characters</value>
-  </data>
-  <data name="ConfirmPasswordComapre" xml:space="preserve">
-    <value>Passwords should match</value>
   </data>
 </root>
