--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/GamificationResources.he.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/GamificationResources.he.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Levels" xml:space="preserve">
-    <value>דרגות</value>
+    <value />
   </data>
   <data name="Leaderboard" xml:space="preserve">
-    <value>לוח מובילים</value>
+    <value />
   </data>
 </root>
