--- a/Zbang.Cloudents.Mvc4WebRole/Views/Item/Resources/ItemsResources.he.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Item/Resources/ItemsResources.he.resx
@@ -174,4 +174,7 @@
   <data name="NewReply" xml:space="preserve">
     <value>השב</value>
   </data>
+  <data name="LikeToasterText" xml:space="preserve">
+    <value>המסמך עזר לך? לחץ</value>
+  </data>
 </root>
