--- a/Zbang.Cloudents.Mvc4WebRole/Js/Resources/JsResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Js/Resources/JsResources.resx
@@ -223,8 +223,7 @@
     <value>Spitball</value>
   </data>
   <data name="toasterDepartmentApproved" xml:space="preserve">
-    <value>Access was granted
-</value>
+    <value>Access was granted</value>
   </data>
   <data name="quizDelete" xml:space="preserve">
     <value>Delete</value>
@@ -259,9 +258,9 @@
     <value>flashcard</value>
   </data>
   <data name="flagItem" xml:space="preserve">
-    <value>Flag submitted</value>
+    <value>Document has been reported</value>
   </data>
   <data name="renameItem" xml:space="preserve">
-    <value>Document name changed</value>
+    <value>Document has been renamed</value>
   </data>
 </root>
