resources fixes in gamification

--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/GamificationResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/GamificationResources.resx
@@ -131,7 +131,7 @@
     <comment>Via Code</comment>
   </data>
   <data name="Level2Description" xml:space="preserve">
-    <value>You’re no longer the new kid at school! Training wheels have been removed. There is still much to learn and achieve. Study on, young Sophomore!</value>
+    <value>You’re no longer the new kid at school! Training wheels have been removed. There is still much to learn and achieve. Study on, young Spitballer!</value>
     <comment>Via Code</comment>
   </data>
   <data name="Level3Description" xml:space="preserve">
