Final gamification fixes

--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/GamificationResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/GamificationResources.resx
@@ -182,4 +182,7 @@
   <data name="Rank" xml:space="preserve">
     <value>Rank</value>
   </data>
+  <data name="DocsPointsValueTitle" xml:space="preserve">
+    <value>Doc (per 10)</value>
+  </data>
 </root>
