--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/GamificationResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/GamificationResources.resx
@@ -131,19 +131,19 @@
     <comment>Via Code</comment>
   </data>
   <data name="Level2Description" xml:space="preserve">
-    <value>You’re no longer the new kid at school! Training wheels have been removed. There is still much to learn and achieve. Study on, young Spitballer!</value>
+    <value>You’re no longer the new kid at school! Training wheels have been removed. There is still much to learn and achieve. Study on, Young Gun!</value>
     <comment>Via Code</comment>
   </data>
   <data name="Level3Description" xml:space="preserve">
-    <value>It’s clear you know what you’re doing. Young Spitballers rely on you for wisdom and knowledge. Yet, a smart upperclassman knows there is still much to learn!</value>
+    <value>It’s clear you know what you’re doing. Young Spitballers rely on you for wisdom and knowledge. Yet, a smart student knows there is still much to learn!</value>
     <comment>Via Code</comment>
   </data>
   <data name="Level4Description" xml:space="preserve">
-    <value>You’ve achieved far more than the average student – you will forever be known as a Spitball Scholar.</value>
+    <value>Other students in the class look up to you. There’s a reason your parents always told you that you were special!</value>
     <comment>Via Code</comment>
   </data>
   <data name="Level5Description" xml:space="preserve">
-    <value>Few have made it this far, and even fewer will make it further. Are you ready to teach other students the key to success?</value>
+    <value>You’ve achieved far more than the average student – you will forever be known as a Spitball Legend.</value>
     <comment>Via Code</comment>
   </data>
   <data name="BadgeCreateQuizzesDescription" xml:space="preserve">
