--- a/Zbang.Cloudents.Mvc4WebRole/Controllers/Resources/SeoBaseUniversityResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Controllers/Resources/SeoBaseUniversityResources.resx
@@ -139,6 +139,10 @@
     <value>Quizzes</value>
   </data>
   <data name="FlashcardMetaDescription" xml:space="preserve">
-    <value>Try out this new flashcard set {0} in {1}</value>
+    <value>Practice and improve your knowledge in {0} and test yourself with the {1} flashcards your classmates have built. Start getting better grades with Spitball!</value>
+  </data>
+  <data name="FlashcardTitle" xml:space="preserve">
+    <value>Flashcard</value>
+    <comment>s</comment>
   </data>
 </root>
