Added message button to user page

--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/UserResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/UserResources.resx
@@ -130,6 +130,6 @@
     <value>Share</value>
   </data>
   <data name="MessageButton" xml:space="preserve">
-    <value>Personal message</value>
+    <value>Message</value>
   </data>
 </root>
