--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/GamificationResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/GamificationResources.resx
@@ -173,9 +173,6 @@
   <data name="GamificationTableTitle" xml:space="preserve">
     <value>Points System</value>
   </data>
-  <data name="Points" xml:space="preserve">
-    <value>Points</value>
-  </data>
   <data name="NextLevelTItle" xml:space="preserve">
     <value>Next Level in</value>
   </data>
@@ -184,5 +181,8 @@
   </data>
   <data name="DocsPointsValueTitle" xml:space="preserve">
     <value>Doc (per 10)</value>
+  </data>
+  <data name="Complete" xml:space="preserve">
+    <value>Complete</value>
   </data>
 </root>
