--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Resources/GeneralResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Resources/GeneralResources.resx
@@ -212,9 +212,9 @@ but try checking the documents tab for related material</value>
     <value>remove</value>
   </data>
   <data name="SingleCourse" xml:space="preserve">
-    <value>1 Course</value>
+    <value>Course</value>
   </data>
   <data name="SingleMember" xml:space="preserve">
-    <value>1 Classmate</value>
+    <value>Classmate</value>
   </data>
 </root>
