--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/GamificationResources.he.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/GamificationResources.he.resx
@@ -144,7 +144,7 @@
     <value>עקוב אחרי 3 קורסים לקבלת 500 נקודות </value>
   </data>
   <data name="BadgeLikesDescription" xml:space="preserve">
-    <value>פרגן ב"אהבתי" ל-50 פוסטים או מסמכים על מנת לזכות במדליה זו וקבל 1,500 נקודות</value>
+    <value>פרגן ב"אהבתי" ל-50 פוסטים או מסמכים על מנת לזכות במדליה זו וקבל 1,500 נקודות.</value>
   </data>
   <data name="BadgeRegisterDescription" xml:space="preserve">
     <value>כל הכבוד נרשמת, זכית ב500 נקודות, זה היה קל.</value>
