--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/GamificationResources.resx
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Resources/GamificationResources.resx
@@ -153,7 +153,7 @@
     <value>Join 3 Spitball classes for a quick 500 points! Now you're getting the hang of it.</value>
   <comment>Via Code</comment></data>
   <data name="BadgeLikesDescription" xml:space="preserve">
-    <value>For a whopping 1500 points, like 50 posts or docs that you think are of great value</value>
+    <value>For a whopping 1500 points, like 50 posts or docs that you think are of great value.</value>
   <comment>Via Code</comment></data>
   <data name="BadgeRegisterDescription" xml:space="preserve">
     <value>Woohoo! You did it! 500 points for signing up - that was easy!</value>
